[package]
name = "lora_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
safetensors = "0.4.3"
tinyjson = "2.5.1"
clap = { version = "4.5.4", features = ["derive"] }
eframe = { version = "0.28.1", features = ["persistence"] }
egui_file = "0.18.0"
serde = { version = "1.0.204", features = ["derive"] }
